nikio-stage/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nikio
  name: nikio
spec:
  host: stage.nikio.io
  path: /
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nikio
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - routerName: router
